--- a/index.html
+++ b/index.html
@@ -513,13 +513,20 @@
               placeholder="Wprowadź tekst"
             ></textarea>
           </div>
-          <input class="modal-form-policy visually-hidden" id="user-policy" type="checkbox">
+          <div class="policy-checkbox">
+          <label class="policy">
+          <input class="checkbox" id="user-policy" type="checkbox" chcecked required>
+          
+          <!-- <svg class="icon-checked" width="11px" height="8px">
+            <use href="./images/icons.svg#icon-checkbox"></use>
+          </svg> -->
           <label class="modal-form-policy-text" for="user-policy">Oświadczam, iż akceptuję
              <a href="#"
             class="modal_form-regulations-link">Regulamin</a>
             i <a href="#" class="modal_form-regulations-link">Politykę Prywatności.</a>
             <button class="modal-submit-btn" type="submit">Wyślij</button> 
-    </label> 
+          </label> 
+        </div>
         
         </form>
       </div>
